syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.lsspace.preference";

package com.glance.spaces.lsspace.preference;

import"com/glance/spaces/lsspace/preference/pref_option_list.proto";

message GamesSpacePreference {
  int32 version = 1;
  string id = 2;
  PrefOptionList categories = 3;
}
