syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.lsspace.preference";

package com.glance.spaces.lsspace.preference;

import "com/glance/spaces/lsspace/preference/teams_data.proto";

message SportsSpacePreference {
  int32 version = 1;
  string id = 2;
  TeamsData teams_data = 3;
}